# StrictScript

./: Javascript.hs  Lex.hs  Main.hs  Parse.hs  StrictScript.cabal  readme.md  test.ss
TypeCheck/: Core.hs  Infer.hs  TI.hs  Tests.hs  Types.hs  Unify.hs
